2010-04-19  Teodor Zlatanov  <tzz@lifelogs.com>

	* git.gnus.org/index.html: Tell about server setup.  Tell about
	commit cvslog@quimby.gnus.org address.  Tell about subject
	prefix.  Tell about git-http-backend again.

2010-04-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* git.gnus.org/index.html: Fix 'comit' typos.

2010-04-17  Teodor Zlatanov  <tzz@lifelogs.com>

	* git.gnus.org/index.html: Added index.html for git.gnus.org.