@@ -51,9 +51,12 @@ so that will, we hope, prevent unfortunate accidents.
 
       </li>
       <li>Server setup: Apache 2 using git-http-backend.  Commits go
-	to <b>cvslog@quimby.gnus.org</b>, prefixed with <b>[git] </b>.
-	There are two servers but they both run git-http-backend so
-	"smart" clients are faster for committers and anonymous readers.
+	to <b>cvslog@quimby.gnus.org</b>
+	and <b>ding-commits@quimby.gnus.org</b>, prefixed
+	with <b>[git] </b> and the envelope sender
+	is <b>git-logger</b>.  There are two (HTTP and HTTPS) Apache 2
+	servers but they both run git-http-backend so "smart" clients
+	are faster for committers and anonymous readers.
       </li>
     </ul>
 
